# TheLibrary

./: .gitignore  LICENSE
BeaconChat/: BeaconChat.csproj  BeaconChat.sln  Dockerfile  GlobalUsings.cs  Program.cs  appsettings.json
BeaconChat/Controllers/: HomeController.cs
BeaconChat/Data/: ApplicationDbContext.cs
BeaconChat/Migrations/: 20231201224814_InitialCreate.Designer.cs  20231201224814_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
BeaconChat/Models/: ErrorViewModel.cs
BeaconChat/Properties/: launchSettings.json
BeaconChat/Views/: _ViewImports.cshtml
Doubly Linked List API/: Doubly Linked List API.sln  Doubly Linked List API.vcxproj
EasyEstimates/: EasyEstimates.sln
EasyEstimates/EasyEstimates/: App.config  App.xaml  App.xaml.cs  EasyEstimates.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
HarnessHelper/: Dockerfile  GlobalUsings.cs  HarnessHelper.csproj  HarnessHelper.sln  Program.cs  appsettings.json
HarnessHelper/Controllers/: ColorsController.cs  DevicesController.cs  HomeController.cs  PinsController.cs  PlugsController.cs  WiresController.cs
HarnessHelper/Data/: ApplicationDbContext.cs  HarnessDbContext.cs
HarnessHelper/Migrations/: 20240325163641_InitialHarness.Designer.cs  20240325163641_InitialHarness.cs  HarnessDbContextModelSnapshot.cs
HarnessHelper/Models/: Color.cs  Device.cs  Devicetotal.cs  ErrorViewModel.cs  Pin.cs  Plug.cs  Plugtotal.cs  Wire.cs  Wiretotal.cs
HarnessHelper/Properties/: launchSettings.json
HarnessHelper/Views/: _ViewImports.cshtml
IdentityController/: Dockerfile  GlobalUsings.cs  IdentityController.csproj  IdentityController.sln  Program.cs  appsettings.json
IdentityController/Controllers/: HomeController.cs  RolesController.cs  UsersController.cs
IdentityController/Data/: ApplicationDbContext.cs
IdentityController/Models/: ErrorViewModel.cs  Role.cs  User.cs
IdentityController/Properties/: launchSettings.json
IdentityController/Views/: _ViewImports.cshtml
MedicationBot/: MedicationBot.sln  MedicationBot.vcxproj  MedicationBot.vcxproj.filters
MyAssistant/: Dockerfile  MyAssistant.csproj  MyAssistant.sln  Program.cs  appsettings.json
MyAssistant/Controllers/: HomeController.cs
MyAssistant/Data/: ApplicationDbContext.cs
MyAssistant/Models/: ErrorViewModel.cs
MyAssistant/Properties/: launchSettings.json
MyAssistant/Views/: _ViewImports.cshtml
MyMedic/: MyMedic.sln  MyMedic.vcxproj  MyMedic.vcxproj.filters
MyMedic/medication/: MyMedic.cpp  MyMedic.h  medication.h
RapidTireEstimates/: README.txt  RapidTireEstimates.sln
RapidTireEstimates/RapidTireEstimates/: Page1.xaml  Program.cs  RapidTireEstimates.csproj  appsettings.json
RapidTireEstimates_/: RapidTireEstimates.sln
RapidTireEstimates_/RapidTireEstimates/: App.Config  App.xaml  App.xaml.cs  Page1.xaml.cs  RapidTireEstimates.csproj
SANDBOX/: SANDBOX.sln  SANDBOX.vcxproj
Scheduler/: Scheduler.sln
Scheduler/Scheduler/: Availability.cpp  Availability.h  Employee.cpp  Employee.h  Schedule.cpp  Schedule.h  Scheduler.vcxproj  Scheduler.vcxproj.filters  Source.cpp
Stuff/: Stuff.sln  Stuff.vcxproj
Sudoku/dll/: dll.sln
Sudoku/exe/: 3x3.cpp  9x9.cpp  InputOutput.cpp  Sudoku Menu.cpp  Sudokus.sln  Sudokus.vcxproj  Sudokus.vcxproj.filters  puzzle.sud  sudoku.h
Sudoku/test/: test.sln
Sudoku/window wizard/: Resource.h  window wizard.cpp  window wizard.rc  window wizard.sln  window wizard.vcxproj  window wizard.vcxproj.filters
Sudoku_old/dll/: Sudoku.sln  Sudoku.vcxproj
TheWarehouse/: CreateIdentityTables.sql  Dockerfile  GlobalUsings.cs  InitializeWarehouseDb.sql  MySqlConfiguration.cs  Program.cs  TheWarehouse.csproj  TheWarehouse.sln  TheWarehouseMySqlModel.mwb  TheWarehouseMySqlModel.mwb.beforefix  appsettings.json  mysql-scripts.json
TheWarehouse/Controllers/: BaseController.cs  CartController.cs  CategoriesController.cs  EmployeesController.cs  HomeController.cs  IngredientsController.cs  InventoriesController.cs  InventorycodesController.cs  MenucategoriesController.cs  MenuitemsController.cs  ReceiptsController.cs  StockcodesController.cs  StockreceiptsController.cs  StocksController.cs  SuppliersController.cs  SuppliesController.cs  SupplyCountController.cs  SupplycategoriesController.cs  SupplytypesController.cs  TransactioncodesController.cs  TransactionitemsController.cs  TransactionsController.cs
TheWarehouse/Data/: ApplicationDbContext.cs  WarehouseDbContext.cs
TheWarehouse/Documentation/: index.html  sprocs.html  table_details_0.html  table_details_1.html  table_details_10.html  table_details_11.html  table_details_12.html  table_details_2.html  table_details_3.html  table_details_4.html  (+8 more)
WpfApp1/: App.config  App.xaml.cs  WpfApp1.csproj  WpfApp1.sln
_TheWarehouse/: CreateIdentityTables.sql  GlobalUsings.cs  MenuPriceTotalsController.cs  MySqlHistoryContext.cs  Program.cs  Reload Empty Database.sql  TheWarehouse.csproj  TheWarehouse.sln  TheWarehouseMySqlModel.mwb  TheWarehouseMySqlModel.mwb.bak  TheWarehouseMySqlModel.mwb.beforefix  appsettings.json  transactiontotals.sql
__TheWarehouse/: MySqlHistoryContext.cs  Program.cs  TheWarehouse.csproj  TheWarehouse.sln  appsettings.json
_playingCards/: framework.h  playingCards.h
cardGames/: CMakeLists.txt
cardGames/cardGamesLib/: CMakeLists.txt  cardGamesLib.cpp  framework.h
cardGames/cardGamesLib/solitaire/: CMakeLists.txt  solitaire.cpp  solitaire.h
cardGames/cardGamesLib/war/: CMakeLists.txt  war.cpp  war.h
cardGames/deckLib/: CMakeLists.txt  deckLib.cpp  deckLib.pc.in
cardGames/deckLib/test/: deckLib_test.cpp
cardGamesLib/: cardGamesLib.sln
character creator/: character creator.sln
createStruct/: createStruct.h  createStruct.sln  createStruct.vcxproj  createStruct.vcxproj.filters  dllmain.cpp
deckLib/: CMakeLists.txt  deckLib.cpp
deckLib/lib/: deckLib.h
deckLib/test/: deckLib_test.cpp
libraries/: libdeckLib.so.1
playingCards/: playingCards.cpp  playingCards.sln  playingCards.vcxproj  playingCards.vcxproj.filters
ti-nspire CX II/: dichotomousDistributionKey.py  dichotomousDistributionKey.tns
(+915 files in other folders)
